Fix: remove deprecated package attribute from manifest

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,18 +1,37 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.leo.player">
-  <application
-      android:label="Leo Media Player"
-      android:icon="@mipmap/ic_launcher">
-    <activity
-        android:name="androidx.browser.trusted.TrustedWebActivityLauncherActivity"
-        android:exported="true">
-      <intent-filter>
-        <action android:name="android.intent.action.MAIN" />
-        <category android:name="android.intent.category.LAUNCHER" />
-      </intent-filter>
-      <meta-data
-          android:name="android.support.customtabs.trusted.DEFAULT_URL"
-          android:value="https://islamic-reputation-pushing-antibody.trycloudflare.com/index.html" />
-    </activity>
-  </application>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <application
+        android:label="Leo Media Player"
+        android:icon="@mipmap/ic_launcher"
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        
+        <activity
+            android:name="androidx.appcompat.app.AppCompatActivity"
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+            
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <meta-data
+            android:name="android.support.customtabs.trusted.DEFAULT_URL"
+            android:value="https://leo-media-player.web.app/" />
+
+        <meta-data
+            android:name="android.support.customtabs.trusted.SPLASH_IMAGE_SCALE_TYPE"
+            android:value="FIT_CENTER" />
+
+        <meta-data
+            android:name="android.support.customtabs.trusted.SPLASH_SCREEN_BACKGROUND_COLOR"
+            android:resource="@android:color/white" />
+
+        <meta-data
+            android:name="android.support.customtabs.trusted.SPLASH_SCREEN_FADE_OUT_DURATION"
+            android:resource="@integer/splash_screen_fade_out_duration" />
+
+    </application>
+
 </manifest>
